--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
             <artifactId>testng</artifactId>
             <version>6.9.10</version>
         </dependency>
+             
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-chrome-driver</artifactId>
+            <version>2.48.2</version>
+        </dependency>
     </dependencies>
 
     <build>
